<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:layout_marginTop="-200dp"
    >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:context=".UserProfilePublicFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/user_img_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/public_user_image"
                android:padding="6dp"
                app:layout_constraintEnd_toStartOf="@+id/user_img_public2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_white"
                tools:src="@drawable/ic_person_white" />

            <ImageView
                android:id="@+id/user_img_public2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="16dp"
                android:background="@color/colorAccent"
                android:contentDescription="@string/public_user_image"
                android:padding="6dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/user_img_public"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_person_white"
                tools:src="@drawable/ic_person_white" />

            <TextView
                android:id="@+id/name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="6dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/name_text2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_img_public"
                tools:hint="@string/full_name">

            </TextView>

            <TextView
                android:id="@+id/name_text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="6dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/name_text"
                app:layout_constraintTop_toBottomOf="@+id/user_img_public2"
                tools:hint="@string/full_name">

            </TextView>

            <RatingBar
                android:id="@+id/rating_bar"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.1"
                android:theme="@style/Widget.AppCompat.RatingBar"
                app:layout_constraintEnd_toStartOf="@+id/rating_bar2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_text" />

            <RatingBar
                android:id="@+id/rating_bar2"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:isIndicator="true"
                android:numStars="5"
                android:rating="3.5"
                android:stepSize="0.1"
                android:theme="@style/Widget.AppCompat.RatingBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/rating_bar"
                app:layout_constraintTop_toBottomOf="@+id/name_text2" />

            <TextView
                android:id="@+id/coin_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="6dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/coin_name_text2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar"
                tools:hint="@string/coin_name">

            </TextView>

            <TextView
                android:id="@+id/coin_name_text2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="6dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/coin_name_text"
                app:layout_constraintTop_toBottomOf="@+id/rating_bar2"
                tools:hint="@string/coin_name">

            </TextView>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/coin_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/coin_value2"
                app:layout_constraintTop_toBottomOf="@+id/coin_name_text2"
                tools:hint="@string/coin_value" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/coin_value2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:inputType="number"
                android:maxLength="20"
                android:maxLines="1"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/coin_value"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coin_name_text"
                tools:hint="@string/coin_value" />

            <TextView
                android:id="@+id/exchange_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="6dp"
                android:text="@string/exchange_rate"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/coin_value2"
                tools:hint="@string/exchange_rate">

            </TextView>

            <TextView
                android:id="@+id/exchange_rate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:padding="6dp"
                android:textAlignment="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exchange_rate"
                tools:hint="@string/exchange_rate">

            </TextView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/reset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/exchange_rate2"
                tools:text="@string/reset" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/accept_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:backgroundTint="@color/green"
                android:text="@string/accept_transaction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/reset_button"
                tools:text="@string/accept_transaction" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/decline_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:backgroundTint="@color/red"
                android:text="@string/decline_transaction"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accept_button"
                tools:text="@string/decline_transaction" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>